# cemi

./: .gitignore  CITATION.cff  README.md  ROADMAP.md  package-lock.json  package.json
.github/workflows/: publish-pypi.yml
backend/: main.py
cli/: README.md  pyproject.toml
cli/cemi/: __init__.py  cli.py  contract.py  monitor.py  writer.py
cli/cemi/examples/: __init__.py
cli/tests/: test_verify_command.py
docs/: memory-budget.md
docs/adr/: 0002-static-qualification-gate.md  0003-runtime-qualification-loop.md
docs/ui/: contract-badge.md
scripts/: generate_mock_data.py
src/: mockData.js  mockRunsData.js
src/components/cemi/: MLPlatformDashboard.tsx
src/components/cemi/layout/: Page.tsx
src/components/cemi/runs/: ContractBadge.tsx  ContractResultPanel.tsx  HelpBubble.tsx  QualificationPanel.tsx  RunDetailPage.tsx  RunsPage.tsx  RunsTable.tsx
src/components/cemi/runs/widgets/: useMetricChartData.ts
src/mocks/: defaultWorkspace.ts
src/pages/compare/: ComparePage.tsx  PlatformMatrix.tsx  QualGateDiff.tsx
src/pages/console/: ConsolePage.tsx
src/pages/workspace/: WorkspacePage.tsx
src/types/: domain.ts
src/utils/: experiments.ts  runHelpers.ts
