[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cemi-cli"
version = "0.1.2"
description = "CEMI: An Edge AI MLOps Tool for Model Compression and Embedded Deployment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "msal>=1.0",
    "requests>=2.31",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
cemi = "cemi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cemi*"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cemi = ["workspace_dist/**/*"]
